--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://ton.vote",
-    "name": "TON Vote",
+    "url": "https://www.tekton.fun",
+    "name": "TEKTONIKS",
     "iconUrl": "https://ton.vote/logo.png"
 }
